--- a/packages/react/src/components/radioButton/RadioButton.module.scss
+++ b/packages/react/src/components/radioButton/RadioButton.module.scss
@@ -55,13 +55,12 @@
             background: var(--content-danger);
         }
 
-        //TODO: Modify brute variable to use tokens
         &:hover {
             transition: box-shadow 0.15s ease-in-out;
-            box-shadow: 0 0 0 8px var(--background-hover-opacity-50);
+            @include hover-box-shadow(var(--background-hover-opacity-50));
 
             &:checked {
-                box-shadow: 0 0 0 8px var(--background-danger-hover-opacity-20);
+                @include hover-box-shadow(var(--background-danger-hover-opacity-20));
             }
         }
     }
@@ -82,7 +81,7 @@
         }
     }
 
-    &:focus {
+    &:focus-visible {
         outline: none;
 
         &::after {
@@ -99,14 +98,10 @@
     }
 
     &:hover {
-
-        //TODO: Modify brute variable to use tokens
-
-        transition: box-shadow 0.15s ease-in-out;
-        box-shadow: 0 0 0 8px var(--background-hover-opacity-50);
+        @include hover-box-shadow(var(--background-hover-opacity-50));
 
         &:checked {
-            box-shadow: 0 0 0 8px var(--background-brand-hover-opacity-20);
+            @include hover-box-shadow(var(--background-brand-hover-opacity-20));
         }
     }
 
