--- a/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.component.html
@@ -1,5 +1,8 @@
 <button
     class="rte-button {{ variant() }} size-{{ size() }}"
+    [attr.aria-label]="ariaLabel()"
+    [attr.aria-labelledby]="ariaLabelledBy()"
+    [attr.type]="buttonType()"
     [disabled]="disabled()"
     (click)="onClick($event)"
 >
