--- a/packages/react/src/components/button/Button.module.scss
+++ b/packages/react/src/components/button/Button.module.scss
@@ -58,22 +58,20 @@
 
     &[data-variant='secondary'] {
         background: var(--background-default);
-        border: solid 1px var(--border-brand-default);
+        border: solid $width-xs var(--border-brand-default);
         color: var(--content-brand-default);
 
         &:hover {
             background: var(--background-brand-inverse-hover);
-            border: solid 1px var(--border-brand-default);
         }
 
         &:active {
             background: var(--background-brand-inverse-pressed);
-            border: var(--background-brand-inverse);
         }
 
         &:disabled {
             background: var(--background-disabled);
-            border: solid 1px var(--border-disabled);
+            border: solid $width-xs var(--border-disabled);
             color: var(--content-disabled);
             cursor: default;
         }
