fix: rename $content-brand-press token

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.component.scss
@@ -119,7 +119,7 @@
         }
 
         &:active {
-            color: var(--content-brand-pressed);
+            color: var(--content-brand-press);
         }
 
         &:disabled {
