--- a/packages/react/src/components/button/Button.module.scss
+++ b/packages/react/src/components/button/Button.module.scss
@@ -107,7 +107,7 @@
         }
 
         &:active {
-            color: var(--content-brand-pressed);
+            color: var(--content-brand-press);
         }
 
         &:disabled {
