refactor: rename icon to name and iconAppearance to appearance in icon button components props

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button-toggle/icon-button-toggle.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button-toggle/icon-button-toggle.component.html
@@ -1,12 +1,12 @@
 <rte-icon-button 
   [size]="size()" 
-  [icon]="icon()" 
+  [name]="name()" 
   [compactSpacing]="compactSpacing()"
   [disabled]="disabled()"
   [ariaLabel]="ariaLabel()"
   [ariaLabelledBy]="ariaLabelledBy()"
   [type]="type()"
   [variant]="variant()"
-  [iconAppearance]="selected() ? 'filled' : 'outlined'"
+  [appearance]="selected() ? 'filled' : 'outlined'"
   (click)="onClick($event)"
 />
