--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
@@ -8,8 +8,8 @@
   (click)="onClick($event)"
 >
   <rte-icon
-    [name]="icon()"
-    [appearance]="iconAppearance()"
+    [name]="name()"
+    [appearance]="appearance()"
     [size]="buttonIconSize"
   />
 </button>
