feat: add icon name validation

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
@@ -1,4 +1,5 @@
 <button
+  *ngIf="isValidIconName"
   class="rte-icon-button {{ variant() }} size-{{ size() }}"
   [class.compact-spacing]="compactSpacing()"
   [disabled]="disabled()"
