fix: correct aria-labelledby attribute spelling in icon button component

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
@@ -4,7 +4,7 @@
   [class.compact-spacing]="compactSpacing()"
   [disabled]="disabled()"
   [attr.aria-label]="ariaLabel()"
-  [attr.aria-labelledBy]="ariaLabelledBy()"
+  [attr.aria-labelledby]="ariaLabelledBy()"
   [type]="type()"
   (click)="onClick($event)"
 >
