fix: correct Angular's story target for split-button

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.html
@@ -45,6 +45,7 @@
 
     <div
       class="split-button-dropdown position-{{ position() }}"
+      role="menu"
       data-testid="Menu container"
       [style.visibility]="isOpen() ? 'visible' : 'hidden'"
       (keydown)="handleKeyDownOnMenu($event)"
