--- a/packages/react/.storybook/template/usage/Usage.module.scss
+++ b/packages/react/.storybook/template/usage/Usage.module.scss
@@ -1,29 +1,31 @@
 @use '@design-system-rte/core/tokens/main.scss' as *;
 
-.storybook_usage{
+.storybook_usage {
 
-    .storybook_usage_title{
+    padding-block: 1rem;
+
+    .storybook_usage_title {
         @include typography-storybook-subtitle;
         border: none;
-        padding-bottom: 2rem;
+        padding-bottom: 1rem;
     }
 
-    .storybook_usage_content{
+    .storybook_usage_content {
 
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         gap: 1rem;
 
-        .storybook_usage_item{
+        .storybook_usage_item {
 
-            h4{
+            h4 {
                 margin: 0;
                 @include typography-storybook-header-xs;
                 color: #21272A;
             }
 
-            p{
+            p {
                 margin: 0;
                 @include typography-storybook-header-xs;
                 color: #697077;
