--- a/packages/core/design-tokens/tokens/_typography.scss
+++ b/packages/core/design-tokens/tokens/_typography.scss
@@ -1,4 +1,4 @@
-@use 'primitives/typography' as *;
+@use '../primitives/typography' as *;
 
 $heading-5xl-semibold-font-family: $font-family-nunito;
 $heading-5xl-semibold-font-weight: $font-weight-semibold;
