--- a/packages/core/design-tokens/themes/_vert-foret-light.scss
+++ b/packages/core/design-tokens/themes/_vert-foret-light.scss
@@ -1,25 +1,25 @@
 @use '../primitives/colors' as *;
 @use '../primitives/devColors' as *;
 
-$bleu-iceberg-dark: (
-  "background-default": $greyscale-900,
-  "background-hover": $greyscale-800,
-  "background-pressed": $greyscale-700,
-  "background-disabled": $greyscale-800,
-  "background-inverse": $core-white,
-  "background-brand-default": $bleu-iceberg-300,
-  "background-brand-hover": $bleu-iceberg-200,
-  "background-brand-pressed": $bleu-iceberg-100,
-  "background-brand-selected-default": $bleu-iceberg-300,
-  "background-brand-selected-hover": $bleu-iceberg-200,
-  "background-brand-unselected-default": $bleu-iceberg-700,
-  "background-brand-unselected-hover": $bleu-iceberg-600,
-  "background-brand-inverse-default": $greyscale-900,
-  "background-brand-inverse-hover": $bleu-iceberg-700,
-  "background-brand-inverse-pressed": $bleu-iceberg-600,
-  "background-danger-default": $rouge-indications-400,
-  "background-danger-hover": $rouge-indications-500,
-  "background-danger-pressed": $rouge-indications-600,
+$vert-foret-light: (
+  "background-default": $core-white,
+  "background-hover": $greyscale-50,
+  "background-pressed": $greyscale-100,
+  "background-disabled": $greyscale-0,
+  "background-inverse": $greyscale-900,
+  "background-brand-default": $vert-foret-600,
+  "background-brand-hover": $vert-foret-700,
+  "background-brand-pressed": $vert-foret-800,
+  "background-brand-selected-default": $vert-foret-600,
+  "background-brand-selected-hover": $vert-foret-700,
+  "background-brand-unselected-default": $vert-foret-100,
+  "background-brand-unselected-hover": $vert-foret-200,
+  "background-brand-inverse-default": $core-white,
+  "background-brand-inverse-hover": $vert-foret-50,
+  "background-brand-inverse-pressed": $vert-foret-100,
+  "background-danger-default": $rouge-indications-600,
+  "background-danger-hover": $rouge-indications-700,
+  "background-danger-pressed": $rouge-indications-800,
   "background-status-info-subtle": $bleu-digital-100,
   "background-status-info": $bleu-digital-400,
   "background-status-warning": $jaune-500,
@@ -28,18 +28,18 @@ $bleu-iceberg-dark: (
   "background-status-success-subtle": $vert-digital-200,
   "background-status-alert": $rouge-indications-500,
   "background-status-alert-subtle": $rouge-indications-100,
-  "border-primary": $greyscale-400,
-  "border-secondary": $greyscale-600,
-  "border-tertiary": $greyscale-800,
-  "border-disabled": $greyscale-700,
-  "border-inverse": $greyscale-900,
-  "border-brand-default": $bleu-iceberg-0,
-  "border-brand-focused": $bleu-iceberg-0,
+  "border-primary": $greyscale-600,
+  "border-secondary": $greyscale-400,
+  "border-tertiary": $greyscale-200,
+  "border-disabled": $greyscale-200,
+  "border-inverse": $core-white,
+  "border-brand-default": $vert-foret-600,
+  "border-brand-focused": $vert-foret-900,
   "border-danger": $rouge-indications-600,
   "border-info": $bleu-digital-500,
   "border-warning": $jaune-indications-400,
   "border-success": $vert-digital-600,
-  "chart-brand": $bleu-iceberg-500,
+  "chart-brand": $vert-foret-500,
   "chart-neutral": $greyscale-350,
   "chart-category-1": $bleu-iceberg-500,
   "chart-category-2": $fuschia-500,
@@ -89,35 +89,35 @@ $bleu-iceberg-dark: (
   "chart-greyscale-bold": $greyscale-550,
   "chart-taupe": $taupe-200,
   "chart-taupe-bold": $taupe-600,
-  "content-primary": $core-white,
-  "content-secondary": $greyscale-100,
-  "content-tertiary": $greyscale-300,
-  "content-primary-inverse": $greyscale-900,
-  "content-secondary-inverse": $greyscale-800,
-  "content-tertiary-inverse": $greyscale-600,
-  "content-disabled": $greyscale-700,
-  "content-brand-default": $bleu-iceberg-0,
-  "content-brand-hover": $bleu-iceberg-50,
-  "content-brand-press": $bleu-iceberg-100,
+  "content-primary": $greyscale-900,
+  "content-secondary": $greyscale-800,
+  "content-tertiary": $greyscale-600,
+  "content-primary-inverse": $core-white,
+  "content-secondary-inverse": $greyscale-100,
+  "content-tertiary-inverse": $greyscale-300,
+  "content-disabled": $greyscale-200,
+  "content-brand-default": $vert-foret-600,
+  "content-brand-hover": $vert-foret-700,
+  "content-brand-press": $vert-foret-800,
   "content-link-default": $bleu-digital-500,
-  "content-link-hover": $bleu-digital-400,
-  "content-link-press": $bleu-digital-300,
-  "content-link-visited": $violet-500,
-  "content-link-visited-hover": $violet-400,
-  "content-link-visited-press": $violet-300,
-  "content-danger": $rouge-indications-400,
-  "content-danger-hover": $rouge-indications-500,
-  "content-danger-press": $rouge-indications-600,
+  "content-link-hover": $bleu-digital-600,
+  "content-link-press": $bleu-digital-700,
+  "content-link-visited": $violet-600,
+  "content-link-visited-hover": $violet-700,
+  "content-link-visited-press": $violet-800,
+  "content-danger": $rouge-indications-600,
+  "content-danger-hover": $rouge-indications-700,
+  "content-danger-press": $rouge-indications-800,
   "content-danger-inverse": $core-white,
   "content-info": $bleu-digital-500,
   "content-info-inverse": $core-white,
-  "content-info-bold": $bleu-digital-400,
+  "content-info-bold": $bleu-digital-600,
   "content-warning": $jaune-indications-400,
   "content-warning-inverse": $core-white,
-  "content-warning-bold": $jaune-indications-300,
+  "content-warning-bold": $jaune-indications-500,
   "content-success": $vert-digital-600,
   "content-success-inverse": $core-white,
-  "content-success-bold": $vert-digital-500,
+  "content-success-bold": $vert-digital-700,
   "content-decorative": $greyscale-900,
   "content-status": $greyscale-900,
   "decorative-neutral": $greyscale-50,
@@ -140,18 +140,24 @@ $bleu-iceberg-dark: (
   "decorative-fuschia": $fuschia-200,
   "decorative-rouge-indication": $rouge-indications-100,
   "decorative-taupe": $taupe-200,
-  "elevation-surface-inner-shadow": rgba(0, 0, 0, 0.20),
-  "elevation-surface-shadow-1": rgba(255, 255, 255, 0.03),
-  "elevation-surface-shadow-2": rgba(255, 255, 255, 0.05),
-  "elevation-surface-shadow-3": rgba(255, 255, 255, 0.08),
-  "elevation-surface-shadow-4": rgba(255, 255, 255, 0.10),
-  "elevation-surface-shadow-5": rgba(255, 255, 255, 0.12),
-  "elevation-surface-shadow-6": rgba(255, 255, 255, 0.14),
-  "elevation-shadow-ambient": rgba(0, 0, 0, 0.20),
-  "elevation-shadow-ambient-darker": rgba(0, 0, 0, 0.40),
-  "elevation-shadow-ambient-brand": rgba(0, 0, 0, 0.17),
-  "elevation-shadow-key": rgba(0, 0, 0, 0.28),
-  "elevation-shadow-key-darker": rgba(0, 0, 0, 0.48),
-  "elevation-shadow-key-brand": rgba(0, 0, 0, 0.21),
+  "elevation-surface-inner-shadow": rgba(0, 0, 0, 0.00),
+  "elevation-surface-shadow-1": rgba(255, 255, 255, 0.00),
+  "elevation-surface-shadow-2": rgba(255, 255, 255, 0.00),
+  "elevation-surface-shadow-3": rgba(255, 255, 255, 0.00),
+  "elevation-surface-shadow-4": rgba(255, 255, 255, 0.00),
+  "elevation-surface-shadow-5": rgba(255, 255, 255, 0.00),
+  "elevation-surface-shadow-6": rgba(255, 255, 255, 0.00),
+  "elevation-shadow-ambient": rgba(0, 0, 0, 0.12),
+  "elevation-shadow-ambient-darker": rgba(0, 0, 0, 0.20),
+  "elevation-shadow-ambient-brand": rgba(0, 0, 0, 0.25),
+  "elevation-shadow-key": rgba(0, 0, 0, 0.14),
+  "elevation-shadow-key-darker": rgba(0, 0, 0, 0.24),
+  "elevation-shadow-key-brand": rgba(0, 0, 0, 0.31),
   "gradient-default": #ffffff,
+  // TODO remove this color (not a real token)
+  "background-brand-hover-opacity-20": $vert-foret-700-opacity-20,
+  // TODO remove this color (not a real token)
+  "background-danger-hover-opacity-20": $rouge-indications-700-opacity-20,
+  // TODO remove this color (not a real token)
+  "background-hover-opacity-50": $greyscale-50-opacity-50,
 );
