--- a/packages/core/design-tokens/themes/_violet-light.scss
+++ b/packages/core/design-tokens/themes/_violet-light.scss
@@ -1,22 +1,22 @@
 @use '../primitives/colors' as *;
 @use '../primitives/devColors' as *;
 
-$bleu-iceberg-light: (
+$violet-light: (
   "background-default": $core-white,
   "background-hover": $greyscale-50,
   "background-pressed": $greyscale-100,
   "background-disabled": $greyscale-0,
   "background-inverse": $greyscale-900,
-  "background-brand-default": $bleu-iceberg-600,
-  "background-brand-hover": $bleu-iceberg-700,
-  "background-brand-pressed": $bleu-iceberg-800,
-  "background-brand-selected-default": $bleu-iceberg-600,
-  "background-brand-selected-hover": $bleu-iceberg-700,
-  "background-brand-unselected-default": $bleu-iceberg-100,
-  "background-brand-unselected-hover": $bleu-iceberg-200,
+  "background-brand-default": $violet-600,
+  "background-brand-hover": $violet-700,
+  "background-brand-pressed": $violet-800,
+  "background-brand-selected-default": $violet-600,
+  "background-brand-selected-hover": $violet-700,
+  "background-brand-unselected-default": $violet-100,
+  "background-brand-unselected-hover": $violet-200,
   "background-brand-inverse-default": $core-white,
-  "background-brand-inverse-hover": $bleu-iceberg-50,
-  "background-brand-inverse-pressed": $bleu-iceberg-100,
+  "background-brand-inverse-hover": $violet-50,
+  "background-brand-inverse-pressed": $violet-100,
   "background-danger-default": $rouge-indications-600,
   "background-danger-hover": $rouge-indications-700,
   "background-danger-pressed": $rouge-indications-800,
@@ -33,18 +33,18 @@ $bleu-iceberg-light: (
   "border-tertiary": $greyscale-200,
   "border-disabled": $greyscale-200,
   "border-inverse": $core-white,
-  "border-brand-default": $bleu-iceberg-600,
-  "border-brand-focused": $bleu-iceberg-900,
+  "border-brand-default": $violet-600,
+  "border-brand-focused": $violet-900,
   "border-danger": $rouge-indications-600,
   "border-info": $bleu-digital-500,
   "border-warning": $jaune-indications-400,
   "border-success": $vert-digital-600,
-  "chart-brand": $bleu-iceberg-500,
+  "chart-brand": $violet-600,
   "chart-neutral": $greyscale-350,
   "chart-category-1": $bleu-iceberg-500,
   "chart-category-2": $fuschia-500,
   "chart-category-3": $violet-600,
-  "chart-category-4": $vert-foret-400,
+  "chart-category-4": $vert-foret-500,
   "chart-category-5": $marine-900,
   "chart-category-6": $jaune-indications-500,
   "chart-category-7": $taupe-700,
@@ -60,7 +60,7 @@ $bleu-iceberg-light: (
   "chart-bleu-digital": $bleu-digital-100,
   "chart-bleu-digital-bold": $bleu-digital-500,
   "chart-marine": $marine-100,
-  "chart-marine-bold": $marine-600,
+  "chart-marine-bold": $marine-500,
   "chart-bleu-petrole": $bleu-petrole-100,
   "chart-bleu-petrole-bold": $bleu-petrole-500,
   "chart-bleu-cyan": $bleu-cyan-100,
@@ -83,7 +83,7 @@ $bleu-iceberg-light: (
   "chart-rose-digital-bold": $rose-digital-500,
   "chart-fuschia": $fuschia-100,
   "chart-fuschia-bold": $fuschia-500,
-  "chart-rouge-indications": $rouge-indications-200,
+  "chart-rouge-indications": $rouge-indications-100,
   "chart-rouge-indications-bold": $rouge-indications-500,
   "chart-greyscale": $greyscale-50,
   "chart-greyscale-bold": $greyscale-550,
@@ -96,9 +96,9 @@ $bleu-iceberg-light: (
   "content-secondary-inverse": $greyscale-100,
   "content-tertiary-inverse": $greyscale-300,
   "content-disabled": $greyscale-200,
-  "content-brand-default": $bleu-iceberg-600,
-  "content-brand-hover": $bleu-iceberg-700,
-  "content-brand-press": $bleu-iceberg-800,
+  "content-brand-default": $violet-600,
+  "content-brand-hover": $violet-700,
+  "content-brand-press": $violet-800,
   "content-link-default": $bleu-digital-500,
   "content-link-hover": $bleu-digital-600,
   "content-link-press": $bleu-digital-700,
@@ -154,4 +154,10 @@ $bleu-iceberg-light: (
   "elevation-shadow-key-darker": rgba(0, 0, 0, 0.24),
   "elevation-shadow-key-brand": rgba(0, 0, 0, 0.31),
   "gradient-default": #ffffff,
+  // TODO remove this color (not a real token)
+  "background-brand-hover-opacity-20": $violet-700-opacity-20,
+  // TODO remove this color (not a real token)
+  "background-danger-hover-opacity-20": $rouge-indications-700-opacity-20,
+  // TODO remove this color (not a real token)
+  "background-hover-opacity-50": $greyscale-50-opacity-50,
 );
