--- a/packages/react/src/components/button/Button.module.scss
+++ b/packages/react/src/components/button/Button.module.scss
@@ -1,4 +1,4 @@
-@use '@design-system-rte/core/tokens/main.scss' as *;
+@use '@design-system-rte/core/design-tokens/main.scss' as *;
 
 .button {
     align-items: center;
@@ -16,7 +16,7 @@
         @include typography-button-s;
         border-radius: $radius-s;
         height: 24px;
-        padding: $positive-spacing_050 $positive-spacing_100;  
+        padding: $positive-spacing_050 $positive-spacing_100;
     }
 
     &[data-size='m'] {
@@ -49,12 +49,14 @@
 
         &:disabled {
             background: var(--background-disabled);
-            border: solid  1px var(--border-disabled);
+            border: solid 1px var(--border-disabled);
             box-shadow: none;
             color: var(--content-disabled);
             cursor: default;
         }
-    };
+    }
+
+    ;
 
     &[data-variant='secondary'] {
         background: var(--background-default);
@@ -75,7 +77,9 @@
             color: var(--content-disabled);
             cursor: default;
         }
-    };
+    }
+
+    ;
 
     &[data-variant='text'] {
         background: transparent;
@@ -95,7 +99,9 @@
             color: var(--content-disabled);
             cursor: default;
         }
-    };
+    }
+
+    ;
 
     &[data-variant='transparent'] {
         background: transparent;
@@ -115,8 +121,10 @@
             color: var(--content-disabled);
             cursor: default;
         }
-    };
-    
+    }
+
+    ;
+
     &[data-variant='danger'] {
         background: var(--background-danger-default);
         border: none;
@@ -144,9 +152,11 @@
     &[data-size='s'] {
         padding: 0 $positive-spacing_050;
     }
+
     &[data-size='m'] {
         padding: 0 $positive-spacing_075;
     }
+
     &[data-size='l'] {
         padding: 0 $positive-spacing_100;
     }
