fix: add unit to shadow tokens

--- a/packages/core/design-tokens/tokens/_shadows.scss
+++ b/packages/core/design-tokens/tokens/_shadows.scss
@@ -1,36 +1,36 @@
-$ambient-shadow-position-x: 0;
-$ambient-shadow-position-y: 0;
-$ambient-shadow-blur: 2;
-$ambient-shadow-spread: 0;
-$ambient-shadow-darker-position-x: 0;
-$ambient-shadow-darker-position-y: 0;
-$ambient-shadow-darker-blur: 8;
-$ambient-shadow-darker-spread: 0;
-$inner-shadow-key-position-x: 0;
-$inner-shadow-key-position-y: 1;
-$inner-shadow-key-blur: 4;
-$inner-shadow-key-spread: 0;
-$shadow-1-key-position-x: 0;
-$shadow-1-key-position-y: 1;
-$shadow-1-key-blur: 2;
-$shadow-1-key-spread: 0;
-$shadow-2-key-position-x: 0;
-$shadow-2-key-position-y: 2;
-$shadow-2-key-blur: 4;
-$shadow-2-key-spread: 0;
-$shadow-3-key-position-x: 0;
-$shadow-3-key-position-y: 4;
-$shadow-3-key-blur: 8;
-$shadow-3-key-spread: 0;
-$shadow-4-key-position-x: 0;
-$shadow-4-key-position-y: 8;
-$shadow-4-key-blur: 16;
-$shadow-4-key-spread: 0;
-$shadow-5-key-position-x: 0;
-$shadow-5-key-position-y: 14;
-$shadow-5-key-blur: 28;
-$shadow-5-key-spread: 0;
-$shadow-6-key-position-x: 0;
-$shadow-6-key-position-y: 32;
-$shadow-6-key-blur: 64;
-$shadow-6-key-spread: 0;
+$ambient-shadow-position-x: 0px;
+$ambient-shadow-position-y: 0px;
+$ambient-shadow-blur: 2px;
+$ambient-shadow-spread: 0px;
+$ambient-shadow-darker-position-x: 0px;
+$ambient-shadow-darker-position-y: 0px;
+$ambient-shadow-darker-blur: 8px;
+$ambient-shadow-darker-spread: 0px;
+$inner-shadow-key-position-x: 0px;
+$inner-shadow-key-position-y: 1px;
+$inner-shadow-key-blur: 4px;
+$inner-shadow-key-spread: 0px;
+$shadow-1-key-position-x: 0px;
+$shadow-1-key-position-y: 1px;
+$shadow-1-key-blur: 2px;
+$shadow-1-key-spread: 0px;
+$shadow-2-key-position-x: 0px;
+$shadow-2-key-position-y: 2px;
+$shadow-2-key-blur: 4px;
+$shadow-2-key-spread: 0px;
+$shadow-3-key-position-x: 0px;
+$shadow-3-key-position-y: 4px;
+$shadow-3-key-blur: 8px;
+$shadow-3-key-spread: 0px;
+$shadow-4-key-position-x: 0px;
+$shadow-4-key-position-y: 8px;
+$shadow-4-key-blur: 16px;
+$shadow-4-key-spread: 0px;
+$shadow-5-key-position-x: 0px;
+$shadow-5-key-position-y: 14px;
+$shadow-5-key-blur: 28px;
+$shadow-5-key-spread: 0px;
+$shadow-6-key-position-x: 0px;
+$shadow-6-key-position-y: 32px;
+$shadow-6-key-blur: 64px;
+$shadow-6-key-spread: 0px;
