chore: add log in constructor

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
@@ -11,6 +11,7 @@
   <rte-icon
     [name]="name()"
     [appearance]="appearance()"
-    [size]="buttonIconSize()"
+    [size]="buttonIconSize"
   />
+  <p>Shiba</p>
 </button>
