feat: add elevation mixins

--- a/packages/core/design-tokens/main.scss
+++ b/packages/core/design-tokens/main.scss
@@ -4,6 +4,7 @@
 @forward "tokens/layout";
 @forward "tokens/opacity";
 @forward "tokens/mixins";
+@forward "tokens/elevation";
 
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:wght,FILL,GRAD@400,0,0&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
