--- a/packages/core/design-tokens/tokens/themes/_violet-dark.scss
+++ b/packages/core/design-tokens/tokens/themes/_violet-dark.scss
@@ -1,25 +1,25 @@
-@use '../primitives/colors' as *;
-@use '../primitives/devColors' as *;
+@use '../../primitives/colors' as *;
+@use '../../primitives/devColors' as *;
 
-$bleu-iceberg-light: (
-  "background-default": $core-white,
-  "background-hover": $greyscale-50,
-  "background-pressed": $greyscale-100,
-  "background-disabled": $greyscale-0,
-  "background-inverse": $greyscale-900,
-  "background-brand-default": $bleu-iceberg-600,
-  "background-brand-hover": $bleu-iceberg-700,
-  "background-brand-pressed": $bleu-iceberg-800,
-  "background-brand-selected-default": $bleu-iceberg-600,
-  "background-brand-selected-hover": $bleu-iceberg-700,
-  "background-brand-unselected-default": $bleu-iceberg-100,
-  "background-brand-unselected-hover": $bleu-iceberg-200,
-  "background-brand-inverse-default": $core-white,
-  "background-brand-inverse-hover": $bleu-iceberg-50,
-  "background-brand-inverse-pressed": $bleu-iceberg-100,
-  "background-danger-default": $rouge-indications-600,
-  "background-danger-hover": $rouge-indications-700,
-  "background-danger-pressed": $rouge-indications-800,
+$violet-dark: (
+  "background-default": $greyscale-900,
+  "background-hover": $greyscale-800,
+  "background-pressed": $greyscale-700,
+  "background-disabled": $greyscale-800,
+  "background-inverse": $core-white,
+  "background-brand-default": $violet-300,
+  "background-brand-hover": $violet-200,
+  "background-brand-pressed": $violet-100,
+  "background-brand-selected-default": $violet-300,
+  "background-brand-selected-hover": $violet-200,
+  "background-brand-unselected-default": $violet-700,
+  "background-brand-unselected-hover": $violet-600,
+  "background-brand-inverse-default": $greyscale-900,
+  "background-brand-inverse-hover": $violet-700,
+  "background-brand-inverse-pressed": $violet-600,
+  "background-danger-default": $rouge-indications-400,
+  "background-danger-hover": $rouge-indications-500,
+  "background-danger-pressed": $rouge-indications-600,
   "background-status-info-subtle": $bleu-digital-100,
   "background-status-info": $bleu-digital-400,
   "background-status-warning": $jaune-500,
@@ -28,23 +28,23 @@ $bleu-iceberg-light: (
   "background-status-success-subtle": $vert-digital-200,
   "background-status-alert": $rouge-indications-500,
   "background-status-alert-subtle": $rouge-indications-100,
-  "border-primary": $greyscale-600,
-  "border-secondary": $greyscale-400,
-  "border-tertiary": $greyscale-200,
-  "border-disabled": $greyscale-200,
-  "border-inverse": $core-white,
-  "border-brand-default": $bleu-iceberg-600,
-  "border-brand-focused": $bleu-iceberg-900,
+  "border-primary": $greyscale-400,
+  "border-secondary": $greyscale-600,
+  "border-tertiary": $greyscale-800,
+  "border-disabled": $greyscale-700,
+  "border-inverse": $greyscale-900,
+  "border-brand-default": $violet-0,
+  "border-brand-focused": $violet-0,
   "border-danger": $rouge-indications-600,
   "border-info": $bleu-digital-500,
   "border-warning": $jaune-indications-400,
   "border-success": $vert-digital-600,
-  "chart-brand": $bleu-iceberg-500,
+  "chart-brand": $violet-600,
   "chart-neutral": $greyscale-350,
   "chart-category-1": $bleu-iceberg-500,
   "chart-category-2": $fuschia-500,
   "chart-category-3": $violet-600,
-  "chart-category-4": $vert-foret-400,
+  "chart-category-4": $vert-foret-500,
   "chart-category-5": $marine-900,
   "chart-category-6": $jaune-indications-500,
   "chart-category-7": $taupe-700,
@@ -60,7 +60,7 @@ $bleu-iceberg-light: (
   "chart-bleu-digital": $bleu-digital-100,
   "chart-bleu-digital-bold": $bleu-digital-500,
   "chart-marine": $marine-100,
-  "chart-marine-bold": $marine-600,
+  "chart-marine-bold": $marine-500,
   "chart-bleu-petrole": $bleu-petrole-100,
   "chart-bleu-petrole-bold": $bleu-petrole-500,
   "chart-bleu-cyan": $bleu-cyan-100,
@@ -83,41 +83,41 @@ $bleu-iceberg-light: (
   "chart-rose-digital-bold": $rose-digital-500,
   "chart-fuschia": $fuschia-100,
   "chart-fuschia-bold": $fuschia-500,
-  "chart-rouge-indications": $rouge-indications-200,
+  "chart-rouge-indications": $rouge-indications-100,
   "chart-rouge-indications-bold": $rouge-indications-500,
   "chart-greyscale": $greyscale-50,
   "chart-greyscale-bold": $greyscale-550,
   "chart-taupe": $taupe-200,
   "chart-taupe-bold": $taupe-600,
-  "content-primary": $greyscale-900,
-  "content-secondary": $greyscale-800,
-  "content-tertiary": $greyscale-600,
-  "content-primary-inverse": $core-white,
-  "content-secondary-inverse": $greyscale-100,
-  "content-tertiary-inverse": $greyscale-300,
-  "content-disabled": $greyscale-200,
-  "content-brand-default": $bleu-iceberg-600,
-  "content-brand-hover": $bleu-iceberg-700,
-  "content-brand-press": $bleu-iceberg-800,
+  "content-primary": $core-white,
+  "content-secondary": $greyscale-100,
+  "content-tertiary": $greyscale-300,
+  "content-primary-inverse": $greyscale-900,
+  "content-secondary-inverse": $greyscale-800,
+  "content-tertiary-inverse": $greyscale-600,
+  "content-disabled": $greyscale-700,
+  "content-brand-default": $violet-0,
+  "content-brand-hover": $violet-50,
+  "content-brand-press": $violet-100,
   "content-link-default": $bleu-digital-500,
-  "content-link-hover": $bleu-digital-600,
-  "content-link-press": $bleu-digital-700,
-  "content-link-visited": $violet-600,
-  "content-link-visited-hover": $violet-700,
-  "content-link-visited-press": $violet-800,
-  "content-danger": $rouge-indications-600,
-  "content-danger-hover": $rouge-indications-700,
-  "content-danger-press": $rouge-indications-800,
+  "content-link-hover": $bleu-digital-400,
+  "content-link-press": $bleu-digital-300,
+  "content-link-visited": $violet-500,
+  "content-link-visited-hover": $violet-400,
+  "content-link-visited-press": $violet-300,
+  "content-danger": $rouge-indications-400,
+  "content-danger-hover": $rouge-indications-500,
+  "content-danger-press": $rouge-indications-600,
   "content-danger-inverse": $core-white,
   "content-info": $bleu-digital-500,
   "content-info-inverse": $core-white,
-  "content-info-bold": $bleu-digital-600,
+  "content-info-bold": $bleu-digital-400,
   "content-warning": $jaune-indications-400,
   "content-warning-inverse": $core-white,
-  "content-warning-bold": $jaune-indications-500,
+  "content-warning-bold": $jaune-indications-300,
   "content-success": $vert-digital-600,
   "content-success-inverse": $core-white,
-  "content-success-bold": $vert-digital-700,
+  "content-success-bold": $vert-digital-500,
   "content-decorative": $greyscale-900,
   "content-status": $greyscale-900,
   "decorative-neutral": $greyscale-50,
@@ -140,24 +140,24 @@ $bleu-iceberg-light: (
   "decorative-fuschia": $fuschia-200,
   "decorative-rouge-indication": $rouge-indications-100,
   "decorative-taupe": $taupe-200,
-  "elevation-surface-inner-shadow": rgba(0, 0, 0, 0.00),
-  "elevation-surface-shadow-1": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-2": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-3": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-4": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-5": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-6": rgba(255, 255, 255, 0.00),
-  "elevation-shadow-ambient": rgba(0, 0, 0, 0.12),
-  "elevation-shadow-ambient-darker": rgba(0, 0, 0, 0.20),
-  "elevation-shadow-ambient-brand": rgba(0, 0, 0, 0.25),
-  "elevation-shadow-key": rgba(0, 0, 0, 0.14),
-  "elevation-shadow-key-darker": rgba(0, 0, 0, 0.24),
-  "elevation-shadow-key-brand": rgba(0, 0, 0, 0.31),
+  "elevation-surface-inner-shadow": rgba(0, 0, 0, 0.20),
+  "elevation-surface-shadow-1": rgba(255, 255, 255, 0.03),
+  "elevation-surface-shadow-2": rgba(255, 255, 255, 0.05),
+  "elevation-surface-shadow-3": rgba(255, 255, 255, 0.08),
+  "elevation-surface-shadow-4": rgba(255, 255, 255, 0.10),
+  "elevation-surface-shadow-5": rgba(255, 255, 255, 0.12),
+  "elevation-surface-shadow-6": rgba(255, 255, 255, 0.14),
+  "elevation-shadow-ambient": rgba(0, 0, 0, 0.20),
+  "elevation-shadow-ambient-darker": rgba(0, 0, 0, 0.40),
+  "elevation-shadow-ambient-brand": rgba(0, 0, 0, 0.17),
+  "elevation-shadow-key": rgba(0, 0, 0, 0.28),
+  "elevation-shadow-key-darker": rgba(0, 0, 0, 0.48),
+  "elevation-shadow-key-brand": rgba(0, 0, 0, 0.21),
   "gradient-default": #ffffff,
   // TODO remove this color (not a real token)
-  "background-brand-hover-opacity-20": $bleu-iceberg-700-opacity-20,
+  "background-brand-hover-opacity-20": $violet-200-opacity-20,
   // TODO remove this color (not a real token)
-  "background-danger-hover-opacity-20": $rouge-indications-700-opacity-20,
+  "background-danger-hover-opacity-20": $rouge-indications-500-opacity-20,
   // TODO remove this color (not a real token)
-  "background-hover-opacity-50": $greyscale-50-opacity-50,
+  "background-hover-opacity-50": $greyscale-800-opacity-50,
 );
