feat: add StorybookTabs, Usage, and UtilisationExemple components with styles

--- a/packages/angular/.storybook/main.scss
+++ b/packages/angular/.storybook/main.scss
@@ -1,2 +1,4 @@
 @forward "./template/HeaderComponent/HeaderComponent.module.scss";
 @forward "./template/IconTitle/IconTitle.module.scss";
+@forward "./template/Usage/Usage.module.scss";
+@forward "./template/UtilisationExemple/UtilisationExemple.module.scss";
