--- a/packages/react/src/components/textarea/Textarea.module.scss
+++ b/packages/react/src/components/textarea/Textarea.module.scss
@@ -19,7 +19,6 @@
   }
 
   .header-container {
-
     display: flex;
     width: 100%;
     flex-direction: row;
@@ -27,7 +26,6 @@
     justify-content: space-between;
     padding: $positive-spacing_025 $positive-spacing_100;
     box-sizing: border-box;
-
 
     .label {
       @include typography-text-m;
@@ -66,12 +64,10 @@
   }
 
   .textarea-container {
-
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: flex-start;
-
 
     .textarea {
       @include elevation-neutral-inner-shadow;
@@ -82,7 +78,7 @@
       width: 100%;
       min-width: 140px;
       border-radius: $radius-m;
-      border: 1px solid var(--border-tertiary);
+      border: 1px solid var(--border-secondary);
       opacity: $opacity-100;
       background-color: var(--background-default);
       resize: vertical;
@@ -94,12 +90,10 @@
         max-width: 1100px;
       }
 
-
-      &:focus-visible {
-        outline: 1px solid var(--border-brand-focused);
-        outline-offset: 4px;
+      &:focus-visible,
+      &:active {
+        border: 2px solid var(--border-brand-default);
       }
-
 
       &[data-assistive-text-appearance="error"] {
         border: 2px solid var(--border-danger);
@@ -122,6 +116,7 @@
 
     .assistive-text-link {
       padding: $positive-spacing_050 $positive-spacing_100;
+      font-size: 2px;
     }
 
     .assistive-text {
@@ -138,7 +133,6 @@
       &[data-assistive-text-appearance="success"] {
         color: var(--content-success);
       }
-
     }
   }
 }
