fix: repair angular public api & angular test app

--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -10,3 +10,19 @@
 />
 
 <rte-icon name="home" />
+
+<hr />
+
+<rte-split-button label="Split Button">
+  <rte-button label="Button" variant="primary" size="m" [disabled]="false" icon="home" ariaLabel="Home" ariaLabelledBy="home" buttonType="button" />
+  <rte-button label="Button" variant="primary" size="m" [disabled]="false" icon="home" ariaLabel="Home" ariaLabelledBy="home" buttonType="button" />
+  <rte-button label="Button" variant="primary" size="m" [disabled]="false" icon="home" ariaLabel="Home" ariaLabelledBy="home" buttonType="button" />
+</rte-split-button>
+
+<hr />
+
+<rte-icon-button-toggle name="home" />
+
+<hr />
+
+<span rteTooltip="Tooltip">Tooltip</span>
