feat: update HeaderComponent to use local image imports and add typings for image and style modules
fix: reorder imports in HeaderComponent for consistency and add newline at end of typings.d.ts

feat: update UtilisationExemple component to use img prop and import placeholder image for demonstration

WIP: modified styl to adjust img size

WIP: add main.scss to Storybook styles for improved theming

WIP: update HeaderComponent and UtilisationExemple to use local image imports; add new icon assets

style: format IconTitle component for improved readability

--- a/packages/angular/.storybook/template/HeaderComponent/HeaderComponent.module.scss
+++ b/packages/angular/.storybook/template/HeaderComponent/HeaderComponent.module.scss
@@ -26,7 +26,7 @@
                 justify-content: center;
                 gap: 0.25rem;
 
-                img {
+                .storybook_logo {
                     width: 24px;
                     height: 24px;
                     aspect-ratio: 1;
