--- a/packages/react/.storybook/template/HeaderComponent/HeaderComponent.module.scss
+++ b/packages/react/.storybook/template/HeaderComponent/HeaderComponent.module.scss
@@ -26,7 +26,7 @@
                 justify-content: center;
                 gap: 0.25rem;
 
-                img {
+                .storybook_logo {
                     width: 24px;
                     height: 24px;
                     aspect-ratio: 1;
