chore:(textarea) add component to tests apps

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/textarea/textarea.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/textarea/textarea.component.scss
@@ -27,7 +27,7 @@
     padding: $positive-spacing_025 $positive-spacing_100;
     box-sizing: border-box;
 
-    .label {
+    label {
       @include typography-text-m;
       color: var(--content-secondary);
 
