--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -39,3 +39,11 @@
 <hr />
 
 <p style="display: inline-block; background-color: bisque;" rteBadge [rteBadgeCount]="1">A badge host</p>
+<hr />
+<rte-textarea
+  label="Enter text"
+  labelPosition="top"
+  assistiveTextLabel="This is a label"
+  assistiveTextAppearance="description"
+  [required]="true"
+/>
