--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -44,6 +44,14 @@
   label="Enter text"
   labelPosition="top"
   assistiveTextLabel="This is a label"
-  assistiveTextAppearance="description"
+  assistiveTextAppearance="link"
+  assistiveTextLinkLabel="Learn more"
+  assistiveTextLink="https://example.com"
   [required]="true"
+/>
+
+<rte-link
+  href="https://example.com"
+  label="Link"
+  [subtle]="false"
 />
