--- a/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.scss
@@ -94,7 +94,7 @@
     .split-button-left {
         display: flex;
         border: none;
-        padding: $positive-spacing_0 $positive-spacing_100;
+        padding: $positive-spacing_050 $positive-spacing_150;
         align-items: center;
         gap: $positive-spacing_0;
         align-self: stretch;
@@ -102,6 +102,14 @@
         border-color: var(--border-brand-default);
         background-color: var(--background-brand-default);
         color: var(--content-primary-inverse);
+
+        &.size-s {
+            padding: $positive-spacing_0 $positive-spacing_100;
+        }
+
+        &.size-l {
+            padding: $positive-spacing_100 $positive-spacing_150;
+        }
 
         .split-button-label {
             margin: 0;
@@ -239,6 +247,7 @@
             }
 
             .split-button-right-icon-container {
+                display: flex;
                 pointer-events: none;
             }
         }
