--- a/packages/core/design-tokens/tokens/_themes.scss
+++ b/packages/core/design-tokens/tokens/_themes.scss
@@ -12,3 +12,9 @@ $vert-foret: (
   "light": $vert-foret-light,
   "dark": $vert-foret-dark,
 );
+
+$themes: (
+  "bleu_iceberg": $bleu-iceberg,
+  "violet": $violet,
+  "vert_foret": $vert-foret,
+);
